--- a/index.html
+++ b/index.html
@@ -10,20 +10,76 @@
     <header>
 		<h1>CREATIVE & CLEAN</h1>
 		<p>LUXURY WORKSTATION WITH STYLE.</p>
-		<button class="Creative">Color_boton</button>
+		<button class="Creative">view→</button>
+
+		</section>
 	</header>
 
 	<section class="informacion">
 		<div class="contenido">
-			<h2>MAKE YOUR WORKSTATION FUN WITH THE ENTERTAINMENT.</h2>
+			<h2>MAKE YOUR WORKSTATION FUN WITH ENTERTAINMENT.</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero explicabo natus ea vel exercitationem suscipit non aliquid porro, inventore sapiente! Praesentium recusandae mollitia aperiam voluptatibus omnis? Dicta assumenda ad perspiciatis.</p>
-			<button class="Creative">Color_boton</button>
+			<button class="Creative">view→</button>
 		</div>
-		<img src="assets/images/img01.png" alt="WORKSTATION">
+		<aside class="imagenInformacion">
+			<img src="assets/images/img01.png">
+		</aside>
 	</section>
 
-	<section class="section">
+	<section class="informacion2">
+		<div class="contenido">
+			<h2>WORK ANYWHEHRE YOU LIKE, ANYWEHRE YOU PREFER.</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero explicabo natus ea vel exercitationem suscipit non aliquid porro, inventore sapiente! Praesentium recusandae mollitia aperiam voluptatibus omnis? Dicta assumenda ad perspiciatis.</p>
+			<img src="assets/images/img02.png">
+			<button class="Creative">view→</button>
+			</div>
+			<section class="informacion3">
+			<div class="contenido">
+				<h2>SUPPLY UNMILITED</h2>
+				<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ipsa nihil laborum nulla voluptas non, eius impedit molestiae doloribus itaque, totam ea voluptatibus? Nobis accusantium, obcaecati cupiditate facilis est voluptates!</P>
+				<button class="Creative">Check this out→</button>
+				</div>
+		</section>
+		</section>
+     <footer>
+		<div class="footer">
+			<a href="#">Address</a>
+			<a href="#">Product</a>
+			<a href="#">Learn</a>
+			<a href="#">Pricing</a>
+		</div>
+		<div class="footer">
+			<a href="#">Creative & Clean</a>
+			<a href="#">Features</a>
+			<a href="#">Documentation</a>
+			<a href="#">Basic</a>
+		</div>
+		<div class="footer">
+			<a href="#">Sylhet 3100</a>
+			<a href="#">Pricing</a>
+			<a href="#">Tutorial</a>
+			<a href="#">Regular</a>
+		</div>
+		<div class="footer">
+			<a href="#">Dhaka</a>
+			<a href="#">Marketplace</a>
+			<a href="#">Blog</a>
+			<a href="#">Premium</a>
+		</div>
+		<div class="footer">
+			<a href="#">Blangadesh</a>
+			<a href="#">Open-Source</a>
+			<a href="#">Resource</a>
+			<a href="#">Platinum</a>
+		</div>
+	 </footer>
+	 <footer>
+		<p> &copy; 2017 all rights reserved by Getmira@gmail.com</p>
+	 </footer>
+	 
+	
 	</section>
 		</div>
 	</section>
+	</body>
             
